# email-client-django

./: .gitignore  CONTRIBUTING.md  README.md  boot_django.py  djangoshell.py  makemigrations.py  migrate.py  setup.cfg  setup.py
mailclient/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
mailclient/fixtures/: receipts.json
mailingmanager/: manage.py
mailingmanager/mailingmanager/: asgi.py  settings.py  urls.py  wsgi.py
